Fixing iconfont variable inconsistency, stopping cssnano from screwing with z-indexes, cleaning up README, and adding placeholder mixin.

--- a/scss/global/_icons.scss
+++ b/scss/global/_icons.scss
@@ -1,5 +1,5 @@
 @font-face {
-  font-family: "icons";
+  font-family: 'icons';
   src: url('../fonts/icons.eot');
   src: url('../fonts/icons.eot?#iefix') format('eot'),
     url('../fonts/icons.woff2') format('woff2'),
